Update CI/CD workflow
