# docs/swagger.json
@@ -5,7 +5,7 @@
         "title": "CMN Express API Documentation",
         "termsOfService": "https://sharkytech.vercel.app/terms",
         "contact": {
-            "name": "Lucas Dev Team",
+            "name": "Lucas",
             "url": "https://sharkytech.vercel.app",
             "email": "nguyenmanh180102@gmail.com"
         },
@@ -18,6 +18,36 @@
     "host": "203.145.47.225",
     "basePath": "/",
     "paths": {
+        "/admin/customers/all": {
+            "get": {
+                "description": "Truy xuất danh sách tất cả khách hàng được phân trang",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Liệt kê tất cả khách hàng",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number, defaults to 1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size, defaults to 10",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/admin/customers/pending": {
             "get": {
                 "description": "Truy xuất danh sách khách hàng được phân trang với trạng thái \"PENDING\"",
@@ -31,6 +61,36 @@
                     "Admin"
                 ],
                 "summary": "Liệt kê khách hàng đang \"PENDING\"",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number, defaults to 1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size, defaults to 10",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/admin/delivery-persons/all": {
+            "get": {
+                "description": "Truy xuất danh sách được phân trang của tất cả những người giao hàng",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Liệt kê tất cả những người giao hàng",
                 "parameters": [
                     {
                         "type": "integer",
